fixed button white square, turns red on hover, <About/> still renders behind logo after clicked

--- a/src/styles/background.css
+++ b/src/styles/background.css
@@ -11,13 +11,15 @@
 }
 
 Button:hover {
+    
     border-radius: 40px;
     background-color:red !important;
     color: #FFF;
     opacity: 70%;
-    
-    
-    
+ }
+
+Button {
+     color: green;
  }
 
 
